--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-progressbar/router": "^5.3.2",
     "hammerjs": "^2.0.8",
     "ngx-infinite-scroll": "^8.0.1",
+    "ngx-skeleton-loader": "^2.4.4",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.2",
     "rxjs": "~6.4.0",
